misc. minor cleanups
git-svn-id: https://wala.svn.sourceforge.net/svnroot/wala/trunk@2996 f5eafffb-2e1d-0410-98e4-8ec43c5233c4